--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,41 @@
-set bell-style none
+# Use Vi, not Emacs, style editing
 set editing-mode vi
-set keymap vi-command
-"\e[A": history-search-backward
-"\e[B": history-search-forward
+# this is supposed to display which mode we are currently in
+set show-mode-in-prompt on
+# change cursor shape based on mode
+set vi-ins-mode-string \1\e[6 q\2
+set vi-cmd-mode-string \1\e[2 q\2
+# Show all completions as soon as I press tab, even if there's more than one
+set show-all-if-ambiguous on
+# Ignore case
+set completion-ignore-case on
+# on menu-complete, first display the common prefix, then cycle through the 
+# options when hitting TAB
+set menu-complete-display-prefix on
+
+$if mode=vi
+	set keymap vi-command
+	# these are for vi-command mode
+	# Left and right arrow keys
+	"\e[A": history-search-backward
+	"\e[B": history-search-forward
+	j: history-search-forward
+	k: history-search-backward
+	set keymap vi-insert
+	# these are for vi-insert mode, left and right arrow
+	"\e[A": history-search-backward
+	"\e[B": history-search-forward
+	# taken from another
+	TAB: menu-complete
+$endif
+
+# filetype color
+set colored-stats On
+## Append char to indicate type
+#set visible-stats On
+## Mark symlinked directories
+#set mark-symlinked-directories On
+## Color the common prefix
+#set colored-completion-prefix On
+## Color the common prefix in menu-complete
+#set menu-complete-display-prefix On
