vimtex launched from ranger can do forward-search

--- a/.xsessionrc
+++ b/.xsessionrc
@@ -1,4 +1,1 @@
-# For awesome window manager to access
-# No need to add this path to .bashrc, .bash_profile or .xinitrc
-export PATH=$PATH:$HOME/.myscr/
-
+export PATH=$HOME/.myscr:$PATH
