ctrl+backspace to delete in terminal

--- a/.inputrc
+++ b/.inputrc
@@ -39,3 +39,9 @@ set colored-stats On
 #set colored-completion-prefix On
 ## Color the common prefix in menu-complete
 #set menu-complete-display-prefix On
+
+# Ctrl-Delete: delete next word
+"\e[3;5~": shell-kill-word
+
+# Ctrl-Backspace
+"\C-H": shell-backward-kill-word
