--- a/.inputrc
+++ b/.inputrc
@@ -41,7 +41,8 @@ set colored-stats On
 #set menu-complete-display-prefix On
 
 # Ctrl-Delete: delete next word
-"\e[3;5~": shell-kill-word
+#"\e[3;5~": shell-kill-word
+"\e[3;5~": kill-word
 
 # Ctrl-Backspace
-"\C-H": shell-backward-kill-word
+"\C-H": backward-kill-word
