--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -161,6 +161,11 @@ ext pdf, has epdfview, X, flag f = epdfview -- "$@"
 ext pdf, has qpdfview, X, flag f = qpdfview "$@"
 ext pdf, has open,     X, flag f = open "$@"
 
+ext pdf, has xournal,  X, flag f = xournal "$@"
+
+ext xoj, has xournal,  X, flag f = xournal "$@"
+ext xoj, has xournalpp,  X, flag f = xournalpp "$@"
+
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
 ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has gnumeric,    X, flag f = gnumeric -- "$@"
