coc jump to def in new tab

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,6 +1,6 @@
 {
 //    "coc.preferences.jumpCommand": "drop"
- "coc.preferences.jumpCommand": "drop",
+// "coc.preferences.jumpCommand": "drop",
     "languageserver": {
         "ccls": {
             "command": "ccls",
