--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,22 +11,26 @@
 
 # startup 
 exec --no-startup-id nm-applet
-exec --no-startup-id xfce4-panel
+#exec --no-startup-id xfce4-panel
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id xfsettings
 exec --no-startup-id redshift
 exec --no-startup-id onboard
 exec --no-startup-id i3-msg 'workspace 1:Web; exec /usr/bin/firefox'
 
+# set modifier
 set $mod Mod4
+#set $super Mod4
+set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+#font pango:monospace 10
+#font pango: Noto Sans 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango: DejaVu Sans Mono 10
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -38,21 +42,48 @@ font pango:monospace 10
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+## Launching applications
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec xfce4-terminal
+bindsym $alt+Control+l exec i3lock -c 000000
+bindsym Shift+Print exec xfce4-screenshooter -r
+
+# Jump to the open instance of firefox or open
+#bindsym $mod+Shift+f exec firefocusl 0
+
+# Get me to the next open instance
+#bindsym $mod+shift+z [class="^Zathura$"] focus
+
+bindsym $mod+shift+z [class="Zathura"] focus
+bindsym $mod+shift+v [class="Xfce4-terminal" title=" - VIM"] focus
+bindsym $mod+shift+f [class="Firefox"] focus
+
+# brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+
 
 # kill focused window
 bindsym $mod+Shift+c kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+## Rofi
+#bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
+bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show combi -modi combi  -sidebar-mode -columns 2 -show-icons
+ #-font 'Noto Sans 12'
+
+# Jump between windows
+bindsym $mod+Tab exec rofi -show window  
+
+# Only works for toggling between tiling and floating windows
+bindsym $alt+Tab focus mode_toggle
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-#
-#
 
 # change focus
 bindsym $mod+h focus left
@@ -60,11 +91,9 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+# window navigation
+bindsym $mod+Right workspace next
+bindsym $mod+Left workspace prev
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -86,7 +115,17 @@ bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
-bindsym $mod+m focus parent; fullscreen; focus child
+#bindsym $mod+m focus parent; fullscreen; focus child
+
+bindsym $mod+Shift+m floating toggle; resize set height 100 ppt; resize set width 100 ppt; move absolute position center
+
+## Marks
+## read 1 character and mark the current window with this character
+bindsym $mod+m exec i3-input -F 'mark %s' -l 1 -P 'Mark: '
+ # exec notify-send "Mark set"
+#bindsym $mod+a exec "notify-send \\"Hello, i3; from $USER\\""
+# read 1 character and go to the window with the character
+bindsym $mod+apostrophe exec i3-input -F '[con_mark="%s"] focus' -l 1 -P 'Goto: '
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
@@ -94,13 +133,19 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+t floating toggle
+
+# toggle sticky for floating window, e.g. video chat window
+bindsym $mod+shift+s sticky toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
+# rename workspace
+bindsym $mod+F2 exec i3-input -F 'rename workspace to "%s"' -P 'New name: '
+
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+p focus parent
 bindsym $mod+c focus child
 
 # focus the child container
@@ -135,8 +180,16 @@ bindsym $mod+Shift+r reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+b restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'Exit i3?' -b 'Yes' 'i3-msg exit'"
 
+# absolute scaling of a floating window to make it small
+set $scale_h_1 30
+set $scale_w_1 20
+
+set $scale_h_2 60
+set $scale_w_2 40
+
+set $resize_rate 10
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -145,16 +198,22 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width $resize_rate px or $resize_rate ppt
+        bindsym j resize grow height $resize_rate px or $resize_rate ppt
+        bindsym k resize shrink height $resize_rate px or $resize_rate ppt
+        bindsym l resize grow width $resize_rate px or $resize_rate ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width $resize_rate px or $resize_rate ppt
+        bindsym Down resize grow height $resize_rate px or $resize_rate ppt
+        bindsym Up resize shrink height $resize_rate px or $resize_rate ppt
+        bindsym Right resize grow width $resize_rate px or $resize_rate ppt
+
+	bindsym shift+w resize set height 100 ppt
+	bindsym w resize set width 100 ppt
+
+	bindsym 1 resize set height $scale_h_1 ppt; resize set width $scale_w_1 ppt;
+	bindsym 2 resize set height $scale_h_2 ppt; resize set width $scale_w_2 ppt;
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -163,42 +222,164 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-## Start i3bar to display a workspace bar (plus the system information i3status
-## finds out, if available)
-#bar {
-#        status_command i3status
-#}
 
+## goto mode
+set $goto_1_x 50
+set $goto_1_y 50
+
+# 1920, 1080
+set $goto_2_x 1500
+set $goto_2_y 50
+
+set $goto_3_x 1500
+set $goto_3_y 740
+
+set $goto_4_x 50
+set $goto_4_y 740
+
+## For floating widows: free movement, center
+## For tiling windows: move to positions, center as a float
+set $move_px 20
+mode "goto" {
+	bindsym h move left $move_px px
+	bindsym j move down $move_px px
+	bindsym k move up   $move_px px
+	bindsym l move right   $move_px px
+
+	# move to the current mouse position
+	bindsym period move position mouse
+
+	# absolute center
+	bindsym c floating enable; move absolute position center
+
+	#bindsym 1 move position 50 px 50 px
+	#bindsym 1 move position 10 ppt 10 ppt
+	bindsym 1 move position $goto_1_x px $goto_1_y px
+	#bindsym 1 move position 50 ppt 80 ppt
+
+	bindsym 2 move position $goto_2_x px $goto_2_y px
+	bindsym 3 move position $goto_3_x px $goto_3_y px
+	bindsym 4 move position $goto_4_x px $goto_4_y px
+
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+
+}
+
+bindsym $mod+g mode "goto"
+
+## Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
+## panel
+bar {
+        colors {
+
+	background #2f343f
+
+	## Turns background text unreadable
+	#statusline #2f343f
+	#separator #4b5262
+
+        # colour of border, background, and text
+        focused_workspace       #2f343f #bf616a #d8dee8
+        active_workspace        #2f343f #2f343f #d8dee8
+        inactive_workspace      #2f343f #2f343f #d8dee8
+        urgent_workspacei       #2f343f #ebcb8b #2f343f
+    }
+        status_command i3status
+}
+
+## color of border, background, text, indicator, and child_border
+#client.focused              #bf616a #2f343f #d8dee8 #bf616a #d8dee8
+#client.focused_inactive     #2f343f #2f343f #d8dee8 #2f343f #2f343f
+#client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
+#client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
+#client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
+#client.background           #2f343f
+
+# set primary gruvbox colorscheme colors
+set $bg #282828
+set $red #cc241d
+set $green #98971a
+set $yellow #d79921
+set $blue #458588
+set $purple #b16286
+set $aqua #689d68
+set $gray #a89984
+set $darkgray #1d2021
+
+# aqua
+set $accent_col #689d68
+# green
+#set $accent_col #98971a
+# blue
+#set $accent_col #458588
+# Purple
+#set $accent_col #b16286
+
+# gray
+set $neutral_back #a89984
+#
+#set $neutral_back #fbf1c7
+set $neutral_back #ebdbb2
+
+#color                  border      background  text      indicator child_border
+client.focused          $accent_col $accent_col $neutral_back $purple   $accent_col
+client.focused_inactive $neutral_back   $neutral_back   $yellow   $purple   $neutral_back
+client.unfocused        $neutral_back   $neutral_back   $yellow   $purple   $neutral_back
+client.urgent           $red        $red        $white    $red      $red
 
 #######################################################################
 #                                extra                                #
 #######################################################################
 
+## define a variable
+set $my_width 2
 
-#for_window [class="^.*"] floating_border pixel 0
-hide_edge_borders vertical
+## titlebar and border width modes:
+## normal xx = title + border (width=xx)
+## 1pixel = notitle + border (width=1)
+## pixel xx = notitle + border (width=xx)
+## none = notitle + noborder
+#
+#new_window none
+#new_window normal $my_width
+#new_window 1pixel
+new_window pixel $my_width
 
+#new_float pixel 1
+new_float normal $my_width
+
+
+## Window specific commands
+## Examples
+## enable floating mode for all XTerm windows
+#for_window [class="XTerm"] floating enable
+## Make all urxvts use a 1-pixel border:
+#for_window [class="urxvt"] border 1pixel
+## makes the window floating as soon as I change directory to ~/work
+#for_window [title="x200: ~/wallpapers"] floating enable
+
+## Hide vertical borders adjacent to the screen edges. This is useful if you are using scrollbars, or do not want to waste even two pixels in displayspace.
+#hide_edge_borders vertical
 
 # Enable floating dialogs application window
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
 # Assign application to start on a specific workspace xprop
-assign [class="^Firefox$"] 1
 # Shortcuts to start application
 # Rule to bind firefox is 1, so the desktop number will be 0
-bindsym $mod+Shift+f exec firefocusl 0
+assign [class="^Firefox$"] 1
 
-
-# brightness
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-
+# compatibility with awesome
 bindsym $mod+Escape workspace back_and_forth
-
 
 # Don’t focus window upon opening
 no_focus [window_role="pop-up"]
+
+# To prevent cyclic scrolling though the windows
+focus_wrapping no
 
 
 ####################
@@ -207,16 +388,33 @@ no_focus [window_role="pop-up"]
 # alt-tab hack from
 # https://gist.github.com/olivierlemoal/bff45ab69925e702691d0797fd303fcb
 #See also: https://github.com/i3/i3/issues/838
-exec --no-startup-id "python $HOME/.config/i3/event_listener.py"
-bindsym $mod+Tab exec echo "swap_focus" | ncat --send-only -U "$XDG_RUNTIME_DIR/i3/event-listener.sock"
+#exec --no-startup-id "python $HOME/.config/i3/event_listener.py"
+#bindsym $mod+Tab exec echo "swap_focus" | ncat --send-only -U "$XDG_RUNTIME_DIR/i3/event-listener.sock"
 
+#######################################3
+## Scratchpad window
+# Make the currently focused window a scratchpad
+# (un-float it to move back as a normal window) (Mod+t maybe)
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+# If multiple windows are scratchpad, they will appear alternatively with even number of button presses
+bindsym $mod+minus scratchpad show
+
+# Show the sup-mail scratchpad window, if any.
+bindsym mod4+s [title="^Sup ::"] scratchpad show
 #######################################################################
 #                           Issues with i3                            #
 #######################################################################
-# * No native alt+tab support, workaround hasn't been working
-# * No native maximize (not fullscreen) support
-# * Moving windows through containers is unpredictable
-# * No window border between xfce4-terminal windows
-# * Wasting screen space for title text even when the status bar is present. It is possible to remove the title text, but then the information of the containers is not easy to guess.
-# * Using xfce4-panel is possible instead of limited i3 panel. However, the workspace number is added on a as-needed basis, which confuses xfce4-panel's workspace numbering system. So, it is impossible to use xfce4-terminal with i3 workspaces. It is possible to install a i3 applet for xfce4-terminal, but the ppa is non-responsive and compiling from source is  too complicated.
-# * Otherwise, it is very functional wm and not buggy. I like the simple configuration options.
+# Here are the issues. Otherwise, it is very functional wm and not buggy. I like the simple configuration options.
+# * [ ] No native alt+tab support, workaround hasn't been working
+# * [ ] No native maximize (for firefox at least) (not fullscreen) support
+# * [ ] Maximizing any manpage on terminal does not re-arrange the text
+# * [ ] Mod+hjkl should stop when scrolling through window (should not cycle)
+# * [ ] Shift+Print does not work as intended
+# * [ ] Moving windows through containers is unpredictable
+# * [ ] After changing to firefox with rofi window mode, new window loses focus and goes back to where the mouse pointer is located
+# * [ ] Wasting screen space for title text even when the status bar is present. It is possible to remove the title text, but then the information of the containers is not easy to guess.
+# * [ ] Urgent windows looking for attention that show up in another workplace is invisible in xfce4-panel
+# * [ ] [Couldn't reproduce, seems like xfce4-panel works fine] Using xfce4-panel is possible instead of limited i3 panel. However, the workspace number is added on a as-needed basis, which confuses xfce4-panel's workspace numbering system. So, it is impossible to use xfce4-terminal with i3 workspaces. It is possible to install a i3 applet for xfce4-terminal, but the ppa is non-responsive and compiling from source is  too complicated.
+# * [x] No window border between xfce4-terminal windows (turn on 'Pref > Appearances > Border on new window)
